--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -65,3 +65,13 @@ footer {
     text-align: center;
 }
 
+@media screen and (min-width)
+{
+    header{
+        background-image: url("../images/image2.png");
+        align-content: center;
+        background-repeat: no-repeat;
+        background-size: 100vw 250px
+    }
+
+}
