--- a/pages/menu.css
+++ b/pages/menu.css
@@ -1,5 +1,9 @@
+section{
+    align-items: center;
+    text-align: center;
+}
 img{
     height: 150px;
-    width: 150px;
+    width: 200px;
     border-radius: 50%;
 }
