--- a/pages/index.css
+++ b/pages/index.css
@@ -27,9 +27,7 @@ li.item{
     text-decoration: none;
     text-transform: uppercase;
 }
-li.item:hover{
-    opacity: 70%;
-}
+
 li .title{
     color: gray;
     font-weight: bold;
@@ -49,6 +47,10 @@ a.button1
     border-radius: 3%;
     border: 1px solid #333;
     box-shadow: inset 0 0 1px #333;color: black;
+    
+}
+a.button1:hover{
+    opacity: 70%;
 }
 footer {
     background: rgb(255, 232, 232);
